--- a/codeBet/page_4/CDQ_box2dcollisions.html
+++ b/codeBet/page_4/CDQ_box2dcollisions.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../ico/ico1.jpg">
-    <title>box2D旋转关节</title>
+    <title>box2D碰撞监听</title>
     <link rel="stylesheet" type="text/css" href="div_cot.css">
     <style>
         body {
@@ -25,21 +25,22 @@
     <script>
         let world;
 
+        //储存所有的box对象
+        let boxes = [];
         let boundaries = [];
-        let particles = [];
-        let windmill;
+
 
         function setup() {
             createCanvas(windowWidth, windowHeight);
             smooth();
-            //创建box2D对象
             world = createWorld(new box2d.b2Vec2(0, 0));
+            world.SetContactListener(new CustomListener());
 
+            boundaries.push(new Boundary(0, height, width,10));
             boundaries.push(new Boundary(0, 0, 10,height));
             boundaries.push(new Boundary(width, 0, 10,height));
-            boundaries.push(new Boundary(0, height, width,10));
 
-            windmill = new Windmill(width / 2, height-300);
+
         }
         function windowResized() {
             resizeCanvas(windowWidth,windowHeight);
@@ -52,39 +53,22 @@
             let timeStep = 1.0 / 30;
             world.Step(timeStep, 10, 10);
 
-            if (random(1) < 0.3) {
-                let sz = random(20, 50);
-                particles.push(new Box(random(width / 2 - 100, width / 2 + 100),-20,sz,sz));
+            //显示所有的box
+            for (let i = 0; i < boxes.length; i++) {
+                boxes[i].display();
             }
-
-
-            for (let i = particles.length - 1; i >= 0; i--) {
-                particles[i].display();
-                if (particles[i].done()) {
-                    particles.splice(i, 1);
-                }
-            }
-
 
             //显示所有的boundaries
             for (let i = 0; i < boundaries.length; i++) {
                 boundaries[i].display();
             }
 
-            windmill.display();
-
-            let status = "OFF";
-            if (windmill.motorOn()){
-                status = "ON";
-            }
         }
-        function mousePressed() {
-            windmill.toggleMotor();
-            let status = "OFF";
-            if (windmill.motorOn()){
-                status = "ON";
-            }
-      }
+        function mousePressed(){
+            let b = new Box(mouseX, mouseY,random(10,50),random(10,50));
+            boxes.push(b);
+        }
+
     </script>
     </head>
 
@@ -93,11 +77,11 @@
         
     </main>
     <div class="cot">
-        <h1>box2D旋转关节</h1>
+        <h1>box2D碰撞监听</h1>
         <hr>
-        <p>鼠标点击开关马达</p>
+        <p>鼠标点击放置box</p>
         <hr>
-        <a class="back" href="../../mainPage/mainPage_3.html">退出</a>
+        <a class="back" href="../../mainPage/mainPage_4.html">退出</a>
         <hr>
     </div>
     </body>
