--- a/mainPage/mainPage_1.html
+++ b/mainPage/mainPage_1.html
@@ -38,8 +38,8 @@
                 addComponents(1,"DCB_rotateGroup",3,"旋转的粒子组","捆绑横向速度和旋转角加速度","P5.js,the nature of code");
                 addComponents(1,"DCC_headingVelocity",3,"指向运动方向","atan计算方向角进行旋转","P5.js,the nature of code");
                 addComponents(1,"DCD_polarCoordinates",3,"极坐标转换","转换笛卡尔坐标和极坐标","P5.js,the nature of code");
-                //addPage
-                addPages(3,1);
+
+                addPages(4,1);
 
                 scrollAnimate()
 
@@ -57,6 +57,7 @@
                     <p class="headInnerText_p">或者说诗意的实用的东西</p>
                 </div>
             </div>
+            <div class="imgdown"></div>
         </section>
         <section class="content_section">
             <div class="innerContent_div">
