--- a/mainPage/mainPage_2.html
+++ b/mainPage/mainPage_2.html
@@ -38,8 +38,8 @@
                 addComponents(2,"DFD_basicCA2D",3,"二维CA随机","非面向对象","P5.js,the nature of code");
                 addComponents(2,"DFE_basicCA2D3D",3,"二维CA随机轨迹","rotateable","P5.js,the nature of code");
                 addComponents(2,"DFF_ca2DcellClass",3,"面向对象的CA","颜色显示历史","P5.js,the nature of code");
-                //addPage
-                addPages(3,2);
+
+                addPages(4,2);
                 
                 scrollAnimate()
 
@@ -57,6 +57,7 @@
                     <p class="headInnerText_p">或者说诗意的实用的东西</p>
                 </div>
             </div>
+            <div class="imgdown"></div>
         </section>
         <section class="content_section">
             <div class="innerContent_div">
