--- a/mainPage/mainPage_3.html
+++ b/mainPage/mainPage_3.html
@@ -36,14 +36,10 @@
                 addComponents(3,"CDJ_box2djoint",3,"B2D距离关节","Pair物体","P5.js,the nature of code");
                 addComponents(3,"CDK_box2dJoint2",3,"B2D制造绳索","B2D距离关节","P5.js,the nature of code");
                 addComponents(3,"CDL_box2dRotater",3,"B2D旋转关节","风车类","P5.js,the nature of code");
+                addComponents(3,"CDM_box2dCar",3,"B2D小车","直接实现","P5.js,the nature of code");
+                addComponents(3,"CDN_box2Dtrain",3,"B2D小车","类库实现","P5.js,the nature of code");
 
-
-
-
-                //addComponents(2,"AAA_ca2DcellClassInteractMouse",3,"可交互的GOF","移动鼠标生成Cell","P5.js,the nature of code");
-                //exp
-                //addPage
-                addPages(3,3);
+                addPages(4,3);
 
                 scrollAnimate()
 
@@ -61,6 +57,7 @@
                     <p class="headInnerText_p">或者说诗意的实用的东西</p>
                 </div>
             </div>
+            <div class="imgdown"></div>
         </section>
         <section class="content_section">
             <div class="innerContent_div">
