--- a/codeBet/page_4/CAD_display/DAA_t2dHW.html
+++ b/codeBet/page_4/CAD_display/DAA_t2dHW.html
@@ -26,6 +26,7 @@
         <button id="cancel">取消</button>
     </div>
     <div class="mainBoard">
+        <a href="../../../mainPage/mainPage_4.html" style="color: yellow;text-decoration: none;">退出</a>
         <button id="clearAll">清除痕迹</button>
         <button id="poAll">固定所有点</button>
         <button id="deAll">解锁所有点</button>
