--- a/mainPage/mainPage_4.html
+++ b/mainPage/mainPage_4.html
@@ -16,8 +16,7 @@
                 addComponents(4,"DAA_t2dHW",3,"T2Dhw","创建了新的类表","P5.js,the nature of code");
                 addComponents(4,"DAB_t2dchain",3,"T2D绳子","粒子模拟","P5.js,the nature of code");
                 addComponents(4,"DAC_t2dPls",3,"T2D力学体","定义类","P5.js,the nature of code");
-                addComponents(4,"DAC_t2dPls",3,"T2D力学体","定义类","P5.js,the nature of code");
-                addComponents(4,"CDJ_display/DAA_t2dHW",3,"DISPLAY","CCP!","P5.js,the nature of code");
+                addComponents(4,"CAD_display/DAA_t2dHW",3,"DISPLAY","CCP!","P5.js,the nature of code");
 
 
                 addPages(4,4);
