--- a/mainPage/mainPage_4.html
+++ b/mainPage/mainPage_4.html
@@ -17,6 +17,9 @@
                 addComponents(4,"DAB_t2dchain",3,"T2D绳子","粒子模拟","P5.js,the nature of code");
                 addComponents(4,"DAC_t2dPls",3,"T2D力学体","定义类","P5.js,the nature of code");
                 addComponents(4,"CAD_display/DAA_t2dHW",3,"DISPLAY","CCP!","P5.js,the nature of code");
+                addComponents(4,"DBA_simulateForce_universalGravity_AttractEachOther",3,"重力塌陷","近距离优化","P5.js,the nature of code");
+                addComponents(4,"DBB_simulateForce_universalGravity_AttractEachOther",3,"重力塌陷2","近距离优化","P5.js,the nature of code");
+                addComponents(4,"DCA_CA",3,"生命游戏2","优化流程","P5.js,the nature of code");
 
 
                 addPages(4,4);
