--- a/codeBet/page_4/CAD_display2/DAA_t2dHW.html
+++ b/codeBet/page_4/CAD_display2/DAA_t2dHW.html
@@ -31,6 +31,7 @@
         <button id="cancel">取消</button>
     </div>
     <div class="mainBoard">
+        <a href="../../../mainPage/mainPage_4.html" style="color: rgb(88, 0, 62);text-decoration: none;">退出</a>
         <button id="clearAll">清除痕迹</button>
         <button id="poAll">固定所有点</button>
         <button id="addG">添加重力</button>
