--- a/mainPage/mainPage_4.html
+++ b/mainPage/mainPage_4.html
@@ -20,6 +20,10 @@
                 addComponents(4,"DBA_simulateForce_universalGravity_AttractEachOther",3,"重力塌陷","近距离优化","P5.js,the nature of code");
                 addComponents(4,"DBB_simulateForce_universalGravity_AttractEachOther",3,"重力塌陷2","近距离优化","P5.js,the nature of code");
                 addComponents(4,"DCA_CA",3,"生命游戏2","优化流程","P5.js,the nature of code");
+                addComponents(4,"DDA_3DsimulateForce_universalGravity_AttractEachOther copy",3,"重力塌陷3D","近距离优化","P5.js,the nature of code");
+                addComponents(4,"DDB_simulateGravity2",3,"伪三体系统","跟随星+引力星","P5.js,the nature of code");
+                addComponents(4,"DDC_simulateGravity2",3,"双星伪三体","跟随星+引力星","P5.js,the nature of code");
+                addComponents(4,"DDD_simulateGravity2",3,"三体","3个引力星","P5.js,the nature of code");
 
 
                 addPages(4,4);
