--- a/mainPage/mainPage_4.html
+++ b/mainPage/mainPage_4.html
@@ -24,7 +24,7 @@
                 addComponents(4,"DDB_simulateGravity2",3,"伪三体系统","跟随星+引力星","P5.js,the nature of code");
                 addComponents(4,"DDC_simulateGravity2",3,"双星伪三体","跟随星+引力星","P5.js,the nature of code");
                 addComponents(4,"DDD_simulateGravity2",3,"三体","3个引力星","P5.js,the nature of code");
-
+                addComponents(4,"DEA_calculator/DEA_calculator",3,"双参函数平面","社区!社区!","P5.js");
 
                 addPages(4,4);
 
